--- a/index.html
+++ b/index.html
@@ -8,26 +8,66 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <link rel="icon" href="../../favicon.ico">
-    <title>Signin Template for Bootstrap</title>
-    <!-- Bootstrap core CSS -->
+    <title>Registro N10</title>
     <link href="dist/css/bootstrap.min.css" rel="stylesheet">
-    <!-- Custom styles for this template -->
     <link href="dist/css/signin.css" rel="stylesheet">
+    <link href="dist/css/theme.css" rel="stylesheet">
   </head>
-
   <body>
-
     <div class="container">
+      <div class="row">
+        <img data-src="holder.js/200x200" class="img-thumbnail">
+        <h4>Nivel 10</h4>
+        <span class="text-muted">Imagen de éxito</span>
+      </div>
+        <form>
+          <div align="center"><h2 class="form-signin-heading">Registro</h2></div>
 
-      <form class="form-signin">
-        <h2 class="form-signin-heading">Please sign in</h2>
-        <label for="inputEmail" class="sr-only">User</label>
-        <input type="email" id="inputEmail" class="form-control" placeholder="User" required autofocus>
-        <label for="inputPassword" class="sr-only">Password</label>
-        <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
-        <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
-      </form>
+          <div class="input-group input-group-lg">
+              <span class="input-group-addon col-6" id="sizing-addon1">Nombre:</span>
+              <label for="inputNombre" class="sr-only">Nombre</label>
+              <input type="text" id="inputNombre" class="form-control" placeholder="Ingrese su nombre aquí..." aria-describedby="sizing-addon1" required>
+          </div>
 
+          <div class="input-group input-group-lg">
+              <span class="input-group-addon" id="sizing-addon1">Celular:</span>
+              <label for="inputCelular" class="sr-only">Celular</label>
+              <input type="text" id="inputCelular" class="form-control" placeholder="su teléfono celular..." aria-describedby="sizing-addon1" required>
+          </div>
+
+          <div class="input-group input-group-lg">
+              <span class="input-group-addon" id="sizing-addon1">Ciudad:</span>
+              <label for="inputCelular" class="sr-only">Ciudad</label>
+              <input type="text" id="inputCelular" class="form-control" placeholder="en que ciudad vive?..." aria-describedby="sizing-addon1" required>
+          </div>
+
+          <div class="input-group input-group-lg">
+              <span class="input-group-addon" id="sizing-addon1">País:</span>
+              <label for="inputCelular" class="sr-only">País</label>
+              <input type="text" id="inputCelular" class="form-control" placeholder="en que País vive?..." aria-describedby="sizing-addon1" required>
+          </div>
+
+          <div class="input-group input-group-lg">
+              <span class="input-group-addon" id="sizing-addon1">País:</span>
+              <label for="inputCelular" class="sr-only">País</label>
+              <input type="text" id="inputCelular" class="form-control" placeholder="en que País vive?..." aria-describedby="sizing-addon1" required>
+          </div>
+
+          <div class="input-group input-group-lg">
+              <span class="input-group-addon" id="sizing-addon1">Código de Entrenador:</span>
+              <label for="inputCelular" class="sr-only">Código de Entrenador</label>
+              <input type="text" id="inputCelular" class="form-control" placeholder="Código de Entrenador" aria-describedby="sizing-addon1" required>
+          </div>
+          <button class="btn btn-lg btn-primary btn-block" type="submit">Registrame</button>
+        </form>
+        <br>
+        <button class="btn btn-lg btn-success btn-block">No tengo Código</button>
+      </div>
     </div>
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script>window.jQuery || document.write('<script src="assets/js/vendor/jquery.min.js"><\/script>')</script>
+    <script src="assets/js/docs.min.js"></script>
   </body>
 </html>
