--- a/index.html
+++ b/index.html
@@ -10,16 +10,73 @@
     <link rel="icon" href="../../favicon.ico">
     <title>Registro N10</title>
     <link href="dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="dist/css/navbar-fixed-top.css" rel="stylesheet">
     <link href="dist/css/signin.css" rel="stylesheet">
-    <link href="dist/css/theme.css" rel="stylesheet">
+    <link href="dist/css/carousel.css" rel="stylesheet">
+    <link href="dist/css/custom.css" rel="stylesheet">
   </head>
   <body>
-    <div class="container">
-      <div class="row">
-        <img data-src="holder.js/200x200" class="img-thumbnail">
-        <h4>Nivel 10</h4>
-        <span class="text-muted">Imagen de éxito</span>
+    <!-- Fixed navbar -->
+    <nav class="navbar navbar-inverse navbar-fixed-top">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#">Nivel 10</a>
+        </div>
+        <div id="navbar" class="navbar-collapse collapse">
+          <ul class="nav navbar-nav">
+            <li class="active"><a href="#">Negocio</a></li>
+            <li><a href="#Producto">Producto</a></li>
+            <li><a href="#Contacto">Contacto</a></li>
+            <li><a href="#Privacidad">Privacidad</a></li>
+          </ul>
+        </div><!--/.nav-collapse -->
       </div>
+    </nav>
+    <!-- Carousel
+    ================================================== -->
+    <div id="myCarousel" class="carousel slide" data-ride="carousel">
+      <!-- Indicators -->
+      <ol class="carousel-indicators">
+        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+        <li data-target="#myCarousel" data-slide-to="1"></li>
+      </ol>
+      <div class="carousel-inner" role="listbox">
+        <div class="item active">
+          <img class="first-slide" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="First slide">
+          <div class="container">
+            <div class="carousel-caption">
+              <h1>Imagen de Éxito</h1>
+            </div>
+          </div>
+        </div>
+        <div class="item">
+          <img class="second-slide" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Second slide">
+          <div class="container">
+            <div class="carousel-caption">
+              <h1>Visita nuestras sesiones de video</h1>
+              <p>En nuestras sesiones de video podras...</p>
+              <p><a class="btn btn-lg btn-primary" href="#" role="button">Ir a la página</a></p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </div><!-- /.carousel -->
+
+    <div class="container">
         <form>
           <div align="center"><h2 class="form-signin-heading">Registro</h2></div>
 
@@ -62,12 +119,29 @@
         </form>
         <br>
         <button class="btn btn-lg btn-success btn-block">No tengo Código</button>
+        <br>
+        <br>
+        <br>
+        <br>
       </div>
     </div>
+    <footer class ="bs-docs-footer navbar-inverse" role="contentinfo">
+      <p><h3>Follow us</h3></p>
+      <p>
+        <a href="#facebook"><img src="images/social/facebook.png" width="60px" height="60px"></img></a>
+        <a href="#youtube"><img src="images/social/youtube.png" width="60px" height="60px"></img></a>
+        <a href="#instagram"><img src="images/social/instagram.png" width="60px" height="60px"></img></a>
+      </p>
+      <p >&copy; 2016 Nivel 10. All rights reserved.
+        <a href="#privacy">Privacy</a><font color=white size="3">.</font>
+        <a href="#terms">Terms of Service</a>
+      </p>
+    </footer>
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="assets/js/vendor/jquery.min.js"><\/script>')</script>
+    <script src="dist/js/bootstrap.min.js"></script>
     <script src="assets/js/docs.min.js"></script>
   </body>
 </html>
