--- a/producto.html
+++ b/producto.html
@@ -30,8 +30,8 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="index.html">Negocio</a></li>
-            <li><a href="producto.html">Producto</a></li>
+            <li><a href="index.html">Negocio</a></li>
+            <li class="active"><a href="producto.html">Producto</a></li>
             <li><a href="#Contacto">Contacto</a></li>
             <li><a href="#Privacidad">Privacidad</a></li>
           </ul>
