--- a/producto.html
+++ b/producto.html
@@ -83,31 +83,31 @@
           <div class="input-group input-group-lg">
               <span class="input-group-addon col-6" id="sizing-addon1">Nombre:</span>
               <label for="inputNombre" class="sr-only">Nombre</label>
-              <input type="text" id="inputNombre" class="form-control" placeholder="Ingrese su nombre aquí..." aria-describedby="sizing-addon1" required>
+              <input type="text" id="inputNombre" class="form-control" placeholder="ingresa tu nombre..." aria-describedby="sizing-addon1" required>
+          </div>
+
+          <div class="input-group input-group-lg">
+              <span class="input-group-addon col-6" id="sizing-addon1">Email:</span>
+              <label for="inputNombre" class="sr-only">Email</label>
+              <input type="text" id="inputNombre" class="form-control" placeholder="ingresa tu email..." aria-describedby="sizing-addon1" required>
           </div>
 
           <div class="input-group input-group-lg">
               <span class="input-group-addon" id="sizing-addon1">Celular:</span>
               <label for="inputCelular" class="sr-only">Celular</label>
-              <input type="text" id="inputCelular" class="form-control" placeholder="su teléfono celular..." aria-describedby="sizing-addon1" required>
+              <input type="text" id="inputCelular" class="form-control" placeholder="ingresa tu teléfono celular..." aria-describedby="sizing-addon1" required>
           </div>
 
           <div class="input-group input-group-lg">
               <span class="input-group-addon" id="sizing-addon1">Ciudad:</span>
               <label for="inputCelular" class="sr-only">Ciudad</label>
-              <input type="text" id="inputCelular" class="form-control" placeholder="en que ciudad vive?..." aria-describedby="sizing-addon1" required>
+              <input type="text" id="inputCelular" class="form-control" placeholder="ingresa tu ciudad..." aria-describedby="sizing-addon1" required>
           </div>
 
           <div class="input-group input-group-lg">
               <span class="input-group-addon" id="sizing-addon1">País:</span>
               <label for="inputCelular" class="sr-only">País</label>
-              <input type="text" id="inputCelular" class="form-control" placeholder="en que País vive?..." aria-describedby="sizing-addon1" required>
-          </div>
-
-          <div class="input-group input-group-lg">
-              <span class="input-group-addon" id="sizing-addon1">País:</span>
-              <label for="inputCelular" class="sr-only">País</label>
-              <input type="text" id="inputCelular" class="form-control" placeholder="en que País vive?..." aria-describedby="sizing-addon1" required>
+              <input type="text" id="inputCelular" class="form-control" placeholder="ingresa tu país..." aria-describedby="sizing-addon1" required>
           </div>
 
           <div class="input-group input-group-lg">
