--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Nivel 10</a>
+          <a href="index.html">
+            <img class="navbar-brand" alt="Brand" src="images/ic_launcher.png">
+          </a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
@@ -109,7 +111,7 @@
               <label for="inputCelular" class="sr-only">País</label>
               <input type="text" id="inputCelular" class="form-control" placeholder="ingresa tu país..." aria-describedby="sizing-addon1" required>
           </div>
-          
+
           <div class="input-group input-group-lg">
               <span class="input-group-addon" id="sizing-addon1">Código de Entrenador:</span>
               <label for="inputCelular" class="sr-only">Código de Entrenador</label>
