--- a/trainer.html
+++ b/trainer.html
@@ -9,10 +9,7 @@
 	<meta name="author" content="">
 	<link rel="icon" href="../../favicon.ico">
 	<title>Registro de Entrenadores</title>
-	<!-- Bootstrap core CSS -->
-	<link href="dist/css/bootstrap.min.css" rel="stylesheet">
-	<!-- Custom styles for this template -->
-	<link href="dist/css/register.css" rel="stylesheet">
+
 	<script src="https://www.gstatic.com/firebasejs/3.4.1/firebase.js"></script>
 	<script>
 		// Initialize Firebase
@@ -25,6 +22,11 @@
 		};
 		firebase.initializeApp(config);
 	</script>
+	
+	<!-- Bootstrap core CSS -->
+	<link href="dist/css/bootstrap.min.css" rel="stylesheet">
+	<!-- Custom styles for this template -->
+	<link href="dist/css/register.css" rel="stylesheet">
 	<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/timepicker/1.3.5/jquery.timepicker.min.css">
 </head>
 
@@ -69,7 +71,7 @@
 							<div class="checkbox">
 								<div class="checkbox">
 									<label>
-										<input type="checkbox" value="martes"> Martes 
+										<input type="checkbox" value="martes" id="martes"> Martes 
 									</label>
 								</div>
 								<input type="text" class="form-control timepicker" id="martes_inicio"> 
@@ -79,7 +81,7 @@
 							<div class="checkbox">
 								<div class="checkbox">
 									<label>
-										<input type="checkbox" value="miercoles"> Miercoles 
+										<input type="checkbox" value="miercoles" id="miercoles"> Miercoles 
 									</label>
 								</div>
 								<input type="text" class="form-control timepicker" id="miercoles_inicio"> 
@@ -89,7 +91,7 @@
 							<div class="checkbox">
 								<div class="checkbox">
 									<label>
-										<input type="checkbox" value="jueves"> Jueves 
+										<input type="checkbox" value="jueves" id="jueves"> Jueves 
 									</label>
 								</div>
 								<input type="text" class="form-control timepicker" id="jueves_inicio"> 
@@ -99,7 +101,7 @@
 							<div class="checkbox">
 								<div class="checkbox">
 									<label>
-										<input type="checkbox" value="viernes"> Viernes 
+										<input type="checkbox" value="viernes" id="viernes"> Viernes 
 									</label>
 								</div>
 								<input type="text" class="form-control timepicker" id="viernes_inicio"> 
@@ -109,7 +111,7 @@
 							<div class="checkbox">
 								<div class="checkbox">
 									<label>
-										<input type="checkbox" value="sabado"> Sábado 
+										<input type="checkbox" value="sabado" id="sabado"> Sábado 
 									</label>
 								</div>
 								<input type="text" class="form-control timepicker" id="sabado_inicio"> 
@@ -119,7 +121,7 @@
 							<div class="checkbox">
 								<div class="checkbox">
 									<label>
-										<input type="checkbox" value="domingo"> Domingo 
+										<input type="checkbox" value="domingo" id="domingo"> Domingo 
 									</label>
 								</div>
 								<input type="text" class="form-control timepicker" id="domingo_inicio"> 
@@ -143,6 +145,17 @@
 	<script src="//cdnjs.cloudflare.com/ajax/libs/timepicker/1.3.5/jquery.timepicker.min.js"></script>
 
     <script type="text/javascript">
+    	$(document).ready(function(){
+			$('.timepicker').timepicker({
+			    timeFormat: 'h:mm p',
+			    interval: 60,
+			    defaultTime: '08',
+			    startTime: '01:00am',
+			    dynamic: false,
+			    dropdown: true,
+			    scrollbar: true
+			});
+		});
     	var register = function(){
     		var nombre = document.getElementById("nombre");
     		var biografia = document.getElementById("biografia");
@@ -169,20 +182,51 @@
     			var domingo_inicio = document.getElementById("domingo_inicio");
     			var domingo_fin = document.getElementById("domingo_fin");
 
-    		//alert(nombre.value+" -- "+biografia.value+" -- "+lunes.checked);
-    		alert(lunes_inicio.value+"--"+lunes_fin.value);
-    	}
-    	$(document).ready(function(){
-			$('.timepicker').timepicker({
-			    timeFormat: 'h:mm p',
-			    interval: 60,
-			    defaultTime: '08',
-			    startTime: '01:00am',
-			    dynamic: false,
-			    dropdown: true,
-			    scrollbar: true
+    		var today = new Date();
+			var dd = today.getDate();
+			var mm = today.getMonth()+1; //January is 0!
+			var yyyy = today.getFullYear();
+
+			if(dd<10) {
+			  	dd='0'+dd
+			} 
+
+			if(mm<10) {
+			  	mm='0'+mm
+			} 
+			today = mm+'/'+dd+'/'+yyyy;
+			/*
+			console.log(nombre.value);
+			console.log(biografia.value);
+			console.log(lunes.checked);
+			console.log(lunes_inicio.value);
+			console.log(lunes_fin.value);
+			console.log(martes.checked);
+			console.log(martes_inicio.value);
+			console.log(martes_fin.value);
+			console.log(miercoles.checked);
+			console.log(miercoles_inicio.value);
+			console.log(miercoles_fin.value);
+			console.log(jueves.checked);
+			console.log(jueves_inicio.value);
+			console.log(jueves_fin.value);
+			console.log(viernes.checked);
+			console.log(viernes_inicio.value);
+			console.log(viernes_fin.value);
+			console.log(sabado.checked);
+			console.log(sabado_inicio.value);
+			console.log(sabado_fin.value);
+			console.log(domingo.checked);
+			console.log(domingo_inicio.value);
+			console.log(domingo_fin.value);
+			console.log(today);
+			*/
+			firebase.database().ref('entrenador/').push({
+				nombre: "prueba"
 			});
-		});
+    		//alert(nombre.value+" -- "+biografia.value+" -- "+lunes.checked);
+    		//alert(lunes_inicio.value+"--"+lunes_fin.value);
+    	}
     </script>
 </body>
 </html>
