--- a/trainer.html
+++ b/trainer.html
@@ -22,7 +22,6 @@
 		};
 		firebase.initializeApp(config);
 	</script>
-	
 	<!-- Bootstrap core CSS -->
 	<link href="dist/css/bootstrap.min.css" rel="stylesheet">
 	<!-- Custom styles for this template -->
@@ -222,8 +221,33 @@
 			console.log(today);
 			*/
 			firebase.database().ref('entrenador/').push({
-				nombre: "prueba"
+				nombre: nombre.value,
+				biografia: biografia.value,
+				lunes: lunes.checked,
+				lunes_inicio: lunes_inicio.value, 
+				lunes_fin: lunes_fin.value, 
+				martes: martes.checked, 
+				martes_inicio: martes_inicio.value, 
+				martes_fin: martes_fin.value, 
+				miercoles: miercoles.checked, 
+				miercoles_inicio: miercoles_inicio.value, 
+				miercoles_fin: miercoles_fin.value, 
+				jueves: jueves.checked, 
+				jueves_inicio: jueves_inicio.value, 
+				jueves_fin: jueves_fin.value, 
+				viernes: viernes.checked, 
+				viernes_inicio: viernes_inicio.value, 
+				viernes_fin: viernes_fin.value, 
+				sabado: sabado.checked, 
+				sabado_inicio: sabado_inicio.value, 
+				sabado_fin: sabado_fin.value, 
+				domingo: domingo.checked, 
+				domingo_inicio: domingo_inicio.value, 
+				domingo_fin: domingo_fin.value, 
+				fecha_registro: today 
 			});
+			
+
     		//alert(nombre.value+" -- "+biografia.value+" -- "+lunes.checked);
     		//alert(lunes_inicio.value+"--"+lunes_fin.value);
     	}
