--- a/trainer.html
+++ b/trainer.html
@@ -220,6 +220,28 @@
 			console.log(domingo_fin.value);
 			console.log(today);
 			*/
+
+			// Points to the root reference
+			var storageRef = firebase.storage().ref();
+
+			// Points to 'images'
+			var imagesRef = storageRef.child('images');
+
+			// Points to 'images/space.jpg'
+			// Note that you can use variables to create child values
+			var fileName = 'space.jpg';
+			var spaceRef = imagesRef.child(fileName);
+
+			// File path is 'images/space.jpg'
+			var path = spaceRef.fullPath
+
+			// File name is 'space.jpg'
+			var name = spaceRef.name
+
+			// Points to 'images'
+			var imagesRef = spaceRef.parent;
+
+			
 			firebase.database().ref('entrenador/').push({
 				nombre: nombre.value,
 				biografia: biografia.value,
