--- a/index.html
+++ b/index.html
@@ -9,10 +9,21 @@
     <meta name="author" content="">
     <link rel="icon" href="../../favicon.ico">
     <title>Registro N10</title>
+    <script src="https://www.gstatic.com/firebasejs/3.4.1/firebase.js"></script>
+  	<script>
+  		// Initialize Firebase
+  		var config = {
+  		apiKey: "AIzaSyB4JmaNIheFUZwMsjTBXCnFHKQNfpRFfXA",
+  		authDomain: "formularios-81a40.firebaseapp.com",
+  		databaseURL: "https://formularios-81a40.firebaseio.com",
+  		storageBucket: "formularios-81a40.appspot.com",
+  		messagingSenderId: "793947826055"
+  		};
+  		firebase.initializeApp(config);
+  	</script>
     <link href="dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="dist/css/navbar-fixed-top.css" rel="stylesheet">
     <link href="dist/css/signin.css" rel="stylesheet">
-    <link href="dist/css/carousel.css" rel="stylesheet">
     <link href="dist/css/custom.css" rel="stylesheet">
   </head>
   <body>
@@ -40,46 +51,36 @@
         </div><!--/.nav-collapse -->
       </div>
     </nav>
-    <!-- Carousel
-    ================================================== -->
-    <div id="myCarousel" class="carousel slide" data-ride="carousel">
-      <!-- Indicators -->
+    <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
       <ol class="carousel-indicators">
-        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-        <li data-target="#myCarousel" data-slide-to="1"></li>
+        <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+        <li data-target="#carousel-example-generic" data-slide-to="1"></li>
       </ol>
       <div class="carousel-inner" role="listbox">
         <div class="item active">
-          <img class="first-slide" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="First slide">
-          <div class="container">
-            <div class="carousel-caption">
-              <h1>Imagen de Éxito</h1>
-            </div>
-          </div>
+          <img data-src="holder.js/1140x500/auto/#777:#555/text:First slide" alt="First slide">
         </div>
         <div class="item">
-          <img class="second-slide" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Second slide">
+          <img data-src="holder.js/1140x500/auto/#666:#444/text:Second slide" alt="Second slide">
           <div class="container">
             <div class="carousel-caption">
-              <h1>Visita nuestras sesiones de video</h1>
-              <p>En nuestras sesiones de video podras...</p>
-              <p><a class="btn btn-lg btn-primary" href="#" role="button">Ir a la página</a></p>
+              <a class="btn btn-lg btn-primary" href="#" role="button">Ir a la página</a></p>
             </div>
           </div>
         </div>
       </div>
-      <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+      <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
         <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
         <span class="sr-only">Previous</span>
       </a>
-      <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+      <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
         <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
         <span class="sr-only">Next</span>
       </a>
-    </div><!-- /.carousel -->
+    </div>
 
     <div class="container">
-        <form>
+        <form onsubmit="return false">
           <div align="center"><h2 class="form-signin-heading">Registro</h2></div>
 
           <div class="input-group input-group-lg">
@@ -117,18 +118,16 @@
               <label for="inputCelular" class="sr-only">Código de Entrenador</label>
               <input type="text" id="inputCelular" class="form-control" placeholder="Código de Entrenador" aria-describedby="sizing-addon1" required>
           </div>
-          <button class="btn btn-lg btn-primary btn-block" type="submit">Registrame</button>
+          <button class="btn btn-lg btn-primary btn-block" onClick="register()">Registrame</button>
         </form>
         <br>
         <button class="btn btn-lg btn-success btn-block">No tengo Código</button>
         <br>
-        <br>
-        <br>
-        <br>
       </div>
     </div>
+
     <footer class ="bs-docs-footer navbar-inverse" role="contentinfo">
-      <p><h3>Follow us</h3></p>
+      <p><h3>Siguenos en</h3></p>
       <p>
         <a href="#facebook"><img src="images/social/facebook.png" width="60px" height="60px"></img></a>
         <a href="#youtube"><img src="images/social/youtube.png" width="60px" height="60px"></img></a>
@@ -139,6 +138,16 @@
         <a href="#terms">Terms of Service</a>
       </p>
     </footer>
+    <script>
+    function register(){
+      var nombre = document.getElementById("nombre");
+      var celular = document.getElementById("nombre");
+      var ciudad = document.getElementById("nombre");
+      var pais = document.getElementById("nombre");
+      var codigo = document.getElementById("nombre");
+      
+    }
+    </script>
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
