--- a/producto.html
+++ b/producto.html
@@ -12,7 +12,6 @@
     <link href="dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="dist/css/navbar-fixed-top.css" rel="stylesheet">
     <link href="dist/css/signin.css" rel="stylesheet">
-    <link href="dist/css/carousel.css" rel="stylesheet">
     <link href="dist/css/custom.css" rel="stylesheet">
   </head>
   <body>
@@ -26,7 +25,9 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Nivel 10</a>
+          <a href="index.html">
+            <img class="navbar-brand" alt="Brand" src="images/ic_launcher.png">
+          </a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
@@ -38,44 +39,33 @@
         </div><!--/.nav-collapse -->
       </div>
     </nav>
-    <!-- Carousel
-    ================================================== -->
-    <div id="myCarousel" class="carousel slide" data-ride="carousel">
-      <!-- Indicators -->
+    <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
       <ol class="carousel-indicators">
-        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-        <li data-target="#myCarousel" data-slide-to="1"></li>
+        <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+        <li data-target="#carousel-example-generic" data-slide-to="1"></li>
       </ol>
       <div class="carousel-inner" role="listbox">
         <div class="item active">
-          <img class="first-slide" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="First slide">
-          <div class="container">
-            <div class="carousel-caption">
-              <h1>Imagen de Éxito</h1>
-            </div>
-          </div>
+          <img data-src="holder.js/1140x500/auto/#777:#555/text:First slide" alt="First slide">
         </div>
         <div class="item">
-          <img class="second-slide" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Second slide">
+          <img data-src="holder.js/1140x500/auto/#666:#444/text:Second slide" alt="Second slide">
           <div class="container">
             <div class="carousel-caption">
-              <h1>Visita nuestras sesiones de video</h1>
-              <p>En nuestras sesiones de video podras...</p>
-              <p><a class="btn btn-lg btn-primary" href="#" role="button">Ir a la página</a></p>
+              <a class="btn btn-lg btn-primary" href="#" role="button">Ir a la página</a></p>
             </div>
           </div>
         </div>
       </div>
-      <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+      <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
         <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
         <span class="sr-only">Previous</span>
       </a>
-      <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+      <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
         <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
         <span class="sr-only">Next</span>
       </a>
-    </div><!-- /.carousel -->
-
+    </div>
     <div class="container">
         <form>
           <div align="center"><h2 class="form-signin-heading">Registro</h2></div>
